--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on: [push]
 
 jobs:
-  build:
+  Build:
 
     runs-on: ubuntu-latest
     
@@ -13,11 +13,23 @@ jobs:
     - name: Build
       run: echo Build Complete..
 
-    - name: Test 
+  Test:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+    
+    - name:  
       run: echo Test Completed..
+
+
+  Deploy:
+
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v1
 
     - name: Deploy
       run: echo Deploy Completed..
-
-    - name: Prod
-      run: echo Prod Deployment Completed.
