Modified ci.yml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,23 +3,21 @@ name: CI
 on: 
   push:
     branches:    
-      - main 
+      - main
+      - test-branch
 
 jobs:
   Build:
-
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v1
-    
+
     - name: Build
       run: echo Build Complete..
 
   Test:
-
+    needs: Build
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     
@@ -28,9 +26,8 @@ jobs:
 
 
   Deploy:
-
+    needs: [Build, Test]
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v1
 
